--- a/tools.html
+++ b/tools.html
@@ -2,29 +2,87 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tools - ToolZenHub</title>
   <link rel="stylesheet" href="/assets/css/style.css">
+
+  <style>
+    /* Hero Section */
+    .tools-hero {
+      background: white;
+      text-align: center;
+      padding: 80px 20px;
+      border-bottom: 1px solid #e5e5e5;
+    }
+    .tools-hero h1 {
+      font-size: 40px;
+      color: #1FAF5A;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+    .tools-hero p {
+      font-size: 18px;
+      color: #444;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    /* Tools Grid */
+    .tools-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      padding: 60px 20px;
+      max-width: 1100px;
+      margin: auto;
+    }
+
+    .tool-card {
+      display: block;
+      padding: 40px 20px;
+      background: white;
+      border-radius: 14px;
+      border: 1px solid #e5e5e5;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 600;
+      color: #1FAF5A;
+      text-decoration: none;
+      transition: 0.3s ease;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.05);
+    }
+
+    .tool-card:hover {
+      transform: translateY(-5px);
+      background: #1FAF5A;
+      color: white;
+      box-shadow: 0px 8px 18px rgba(0,0,0,0.12);
+    }
+
+    @media(max-width:700px){
+      .tools-hero h1 { font-size: 32px; }
+    }
+  </style>
 </head>
+
 <body>
 
-  <!-- Header -->
-  <?php include 'header.html'; ?>
+  <!-- HEADER HERE -->
+  <!-- paste header.html content here later -->
 
   <section class="tools-hero">
-    <div class="container">
-      <h1>Explore Our Tools</h1>
-      <p>Smart calculators, health tools, and productivity utilities in one place.</p>
-    </div>
+    <h1>Explore Our Smart Tools</h1>
+    <p>Financial & Health calculators with more AI-powered utilities coming soon.</p>
   </section>
 
-  <section class="tools-grid container">
-    <a href="/finsite/index.html" class="tool-card">Finance Calculators</a>
-    <a href="/HealthTracker/index.html" class="tool-card">Health Calculators</a>
-    <a href="#" class="tool-card">AI Quote Generator</a>
+  <section class="tools-grid">
+    <a href="/finsite/" class="tool-card">Finance Calculators →</a>
+    <a href="/HealthTracker/" class="tool-card">Health Calculators →</a>
+    <a href="#" class="tool-card">AI Quote Generator (Coming Soon)</a>
   </section>
 
-  <!-- Footer -->
-  <?php include 'footer.html'; ?>
+  <!-- FOOTER HERE -->
+  <!-- paste footer.html content here later -->
 
 </body>
 </html>
