--- a/footer.html
+++ b/footer.html
@@ -1,32 +1,45 @@
 <footer class="site-footer">
   <div class="container footer-grid">
-    <div class="footer-section">
-      <h3>ToolZenHub</h3>
-      <p>Your destination for AI tools, productivity utilities, calculators and digital toolkits.</p>
+
+    <div class="footer-col">
+      <h3 class="footer-logo">ToolZenHub</h3>
+      <p>Your trusted hub for smart tools — finance, health & productivity.</p>
     </div>
 
-    <div class="footer-section">
+    <div class="footer-col">
       <h4>Quick Links</h4>
       <ul>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/tools.html">Tools</a></li>
         <li><a href="/blog.html">Blog</a></li>
-        <li><a href="/privacy.html">Privacy Policy</a></li>
+        <li><a href="/about.html">About Us</a></li>
         <li><a href="/contact.html">Contact</a></li>
       </ul>
     </div>
 
-    <div class="footer-section">
+    <div class="footer-col">
+      <h4>Categories</h4>
+      <ul>
+        <li><a href="/finsite/index.html">Finance Tools</a></li>
+        <li><a href="/HealthTracker/index.html">Health Tools</a></li>
+        <li><a href="#">Productivity Tools</a></li>
+        <li><a href="#">AI Tools</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
       <h4>Connect</h4>
-      <ul class="social-links">
+      <ul>
         <li><a href="#">Instagram</a></li>
         <li><a href="#">YouTube</a></li>
         <li><a href="#">Pinterest</a></li>
-        <li><a href="#">X / Twitter</a></li>
+        <li><a href="#">X (Twitter)</a></li>
       </ul>
     </div>
+
   </div>
 
   <div class="footer-bottom">
-    <p>© 2025 ToolZenHub — All Rights Reserved.</p>
+    <p>© 2025 ToolZenHub • All Rights Reserved</p>
   </div>
 </footer>
