--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="tool-card">
             <h3>Financial Tools Suite</h3>
             <p>EMI, SIP, SWP, Home Loan & More</p>
-            <a href="https://toolzenhub.in/finsite/">Open Tools</a>
+            <a href="https://toolzenhub.in/paisa/">Open Tools</a>
         </div>
 
         <div class="tool-card">
