--- a/about.html
+++ b/about.html
@@ -1,92 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>About | ToolZenHub</title>
-<link rel="stylesheet" href="styles.css">
-
-<!-- FONTS -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-<style>
-body { margin:0; font-family:'Poppins', sans-serif; background:white; color:#1f2937; }
-
-/* HEADER */
-header { display:flex; justify-content:space-between; align-items:center; padding:18px 40px; background:white; border-bottom:1px solid #f3f4f6; }
-header a.logo { font-size:26px; font-weight:700; color:#22c55e; text-decoration:none; }
-nav a { margin-left:24px; text-decoration:none; color:#1f2937; font-weight:500; }
-
-/* HERO SECTION */
-.hero { text-align:center; padding:80px 20px; max-width:900px; margin:auto; }
-.hero h1 { font-size:48px; font-weight:700; color:#22c55e; }
-.hero p { font-size:20px; margin-top:10px; line-height:1.6; }
-
-/* SECTIONS */
-.section { padding:70px 20px; max-width:1000px; margin:auto; }
-.section h2 { font-size:32px; font-weight:700; color:#22c55e; margin-bottom:20px; }
-.section p { font-size:18px; line-height:1.6; }
-
-/* CTA BUTTON */
-.btn-primary {
-    display:inline-block;
-    background:#22c55e;
-    color:white;
-    padding:15px 32px;
-    font-size:18px;
-    border-radius:8px;
-    text-decoration:none;
-    margin-top:28px;
-}
-.btn-primary:hover { opacity:0.85; }
-
-/* FOOTER */
-footer {
-    text-align:center;
-    padding:25px;
-    margin-top:40px;
-    background:#f3f4f6;
-    font-size:15px;
-}
-footer span { color:#22c55e; font-weight:600; }
-</style>
+  <meta charset="UTF-8">
+  <title>About - ToolZenHub</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-
 <body>
 
-<header>
-    <a href="index.html" class="logo">ToolZenHub</a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html"><b>About</b></a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</header>
+  <!-- Header -->
+  <?php include 'header.html'; ?>
 
-<section class="hero">
-    <h1>About ToolZenHub</h1>
-    <p>We are building a connected ecosystem of smart productivity tools, calculators, and AI utilities designed to make everyday life easier — from financial planning to personal health.</p>
-</section>
+  <section class="page-hero">
+    <div class="container">
+      <h1>About ToolZenHub</h1>
+      <p>Your all-in-one destination for smart tools that make life easier and more productive.</p>
+    </div>
+  </section>
 
-<section class="section">
-    <h2>Our Mission</h2>
-    <p>At ToolZenHub, our goal is simple: create fast, clean, privacy-focused tools that solve real-life problems instantly. No ads, no logins — just useful tools that work for everyone.</p>
-</section>
+  <section class="about-content container">
+    <h2>Who We Are</h2>
+    <p>ToolZenHub is a modern web tools ecosystem designed to help users make faster decisions,
+       improve productivity, and manage personal health & finance with powerful online calculators,
+       AI utilities, and productivity tools.</p>
 
-<section class="section">
-    <h2>What We Provide</h2>
-    <p>Currently, our platform includes:</p>
-    <ul style="font-size:18px; line-height:1.9;">
-        <li>📊 Financial Tools (EMI, SIP, SWP, Loan calculator)</li>
-        <li>💪 Health Tools (BMI, Hydration, Sleep calculator)</li>
-        <li>🧠 Productivity utilities & upcoming AI features</li>
+    <h2>What We Offer</h2>
+    <ul>
+      <li>Smart Finance Calculators (EMI, SIP, SWP, Home Loan, etc.)</li>
+      <li>Health & Wellness Tools (BMI, Hydration, Sleep)</li>
+      <li>AI-powered Utilities (Coming Soon)</li>
+      <li>Blogs, Guides, Resources & Digital Products</li>
     </ul>
-    <a class="btn-primary" href="index.html">Explore Our Tools</a>
-</section>
 
-<footer>
-    © 2025 <span>ToolZenHub</span> — Smart Tools. Real Results.
-</footer>
+    <h2>Our Vision</h2>
+    <p>To build an interconnected ecosystem of free tools that empower students, professionals,
+       and creators to manage life smarter — with simplicity and accuracy.</p>
+  </section>
+
+  <!-- Footer -->
+  <?php include 'footer.html'; ?>
 
 </body>
 </html>
