--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
         <li><a href="/tools.html">Tools</a></li>
         <li><a href="/blog.html">Blog</a></li>
         <li><a href="/about.html">About</a></li>
-        <li><a href="/contact.html" class="btn-nav">Contact</a></li>
+        <li><a href="/contact.html" class="btn-primary">Contact</a></li>
       </ul>
     </nav>
   </div>
