--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <div class="logo">ToolZenHub</div>
     <nav>
         <a href="index.html">Home</a>
-        <a href="About.html">About</a>
-        <a href="Contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
 </header>
 
