--- a/about.html
+++ b/about.html
@@ -1,43 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>About - ToolZenHub</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+<meta charset="UTF-8">
+<title>About | ToolZenHub</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<style>
+body {
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:#fff;
+  color:#333;
+}
+
+.hero {
+  text-align:center;
+  padding:70px 20px;
+}
+
+.hero h1 { color:#2ecc71; font-size:42px; }
+
+.section {
+  max-width:1000px;
+  margin:auto;
+  padding:40px 20px;
+}
+h2 { color:#2ecc71; }
+</style>
 </head>
+
 <body>
 
-  <!-- Header -->
-  <?php include 'header.html'; ?>
+<!-- HEADER -->
+<header style="border-bottom:1px solid #eaeaea; padding:18px 50px; display:flex; justify-content:space-between; align-items:center;">
+  <div style="font-size:26px; font-weight:700; color:#2ecc71;">ToolZenHub</div>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/about.html">About</a>
+    <a href="/contact.html">Contact</a>
+    <a href="/paisa/">Finance</a>
+    <a href="/HealthTracker/">Health</a>
+  </nav>
+</header>
 
-  <section class="page-hero">
-    <div class="container">
-      <h1>About ToolZenHub</h1>
-      <p>Your all-in-one destination for smart tools that make life easier and more productive.</p>
-    </div>
-  </section>
+<section class="hero">
+  <h1>About ToolZenHub</h1>
+  <p>Your all-in-one hub for smart finance, health & AI tools.</p>
+</section>
 
-  <section class="about-content container">
-    <h2>Who We Are</h2>
-    <p>ToolZenHub is a modern web tools ecosystem designed to help users make faster decisions,
-       improve productivity, and manage personal health & finance with powerful online calculators,
-       AI utilities, and productivity tools.</p>
+<section class="section">
+  <h2>Who We Are</h2>
+  <p>ToolZenHub is a smart tools ecosystem providing free calculators, AI utilities and productivity tools.</p>
 
-    <h2>What We Offer</h2>
-    <ul>
-      <li>Smart Finance Calculators (EMI, SIP, SWP, Home Loan, etc.)</li>
-      <li>Health & Wellness Tools (BMI, Hydration, Sleep)</li>
-      <li>AI-powered Utilities (Coming Soon)</li>
-      <li>Blogs, Guides, Resources & Digital Products</li>
-    </ul>
+  <h2>What We Offer</h2>
+  <ul>
+    <li>Finance Calculators (EMI, SIP, SWP)</li>
+    <li>Health Calculators (BMI, Hydration, Sleep)</li>
+    <li>AI Tools (Coming Soon)</li>
+  </ul>
 
-    <h2>Our Vision</h2>
-    <p>To build an interconnected ecosystem of free tools that empower students, professionals,
-       and creators to manage life smarter — with simplicity and accuracy.</p>
-  </section>
+  <h2>Our Vision</h2>
+  <p>To simplify everyday decisions using smart digital utilities.</p>
+</section>
 
-  <!-- Footer -->
-  <?php include 'footer.html'; ?>
+<footer style="margin-top:60px; padding:28px; text-align:center; background:#f8f8f8;">
+  © 2025 ToolZenHub
+</footer>
 
 </body>
 </html>
