--- a/about.html
+++ b/about.html
@@ -1,70 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>About | ToolZenHub</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
 body {
-  margin:0;
-  font-family:'Poppins',sans-serif;
-  background:#fff;
-  color:#333;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: #ffffff;
+  color: #333;
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 18px 50px;
+  border-bottom: 1px solid #eaeaea;
+}
+
+.logo {
+  font-size: 26px;
+  font-weight: 700;
+  color: #2ecc71;
+}
+
+nav a {
+  margin-left: 22px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #333;
+}
+nav a:hover { color: #2ecc71; }
 
 .hero {
-  text-align:center;
-  padding:70px 20px;
+  text-align: center;
+  padding: 70px 20px;
+}
+.hero h1 {
+  font-size: 42px;
+  color: #2ecc71;
 }
 
-.hero h1 { color:#2ecc71; font-size:42px; }
-
-.section {
-  max-width:1000px;
-  margin:auto;
-  padding:40px 20px;
+.content {
+  max-width: 900px;
+  margin: auto;
+  padding: 30px 20px;
+  line-height: 1.8;
 }
-h2 { color:#2ecc71; }
+
+h2 { color: #2ecc71; }
+
+footer {
+  margin-top: 60px;
+  padding: 28px;
+  text-align: center;
+  background: #f8f8f8;
+}
 </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #eaeaea; padding:18px 50px; display:flex; justify-content:space-between; align-items:center;">
-  <div style="font-size:26px; font-weight:700; color:#2ecc71;">ToolZenHub</div>
+<header>
+  <div class="logo">ToolZenHub</div>
   <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="/contact.html">Contact</a>
-  
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
 <section class="hero">
   <h1>About ToolZenHub</h1>
-  <p>Your all-in-one hub for smart finance, health & AI tools.</p>
+  <p>Your all-in-one hub for financial, health & future AI tools.</p>
 </section>
 
-<section class="section">
+<section class="content">
   <h2>Who We Are</h2>
-  <p>ToolZenHub is a smart tools ecosystem providing free calculators, AI utilities and productivity tools.</p>
+  <p>ToolZenHub is a modern digital tools ecosystem that helps users manage finances, health, and productivity using fast, reliable, and clean web tools.</p>
 
   <h2>What We Offer</h2>
   <ul>
-    <li>Finance Calculators (EMI, SIP, SWP)</li>
-    <li>Health Calculators (BMI, Hydration, Sleep)</li>
-    <li>AI Tools (Coming Soon)</li>
+    <li>Financial Calculators – EMI, SIP, SWP, Loans</li>
+    <li>Health Calculators – BMI, Hydration, Sleep</li>
+    <li>AI Productivity Tools (Coming Soon)</li>
+    <li>Educational Content & Guides</li>
   </ul>
 
-  <h2>Our Vision</h2>
-  <p>To simplify everyday decisions using smart digital utilities.</p>
+  <h2>Our Mission</h2>
+  <p>To build India's most trusted free tools platform for everyday life decisions.</p>
 </section>
 
-<footer style="margin-top:60px; padding:28px; text-align:center; background:#f8f8f8;">
-  © 2025 ToolZenHub
+<footer>
+  © 2025 ToolZenHub — Made with 💚 for Everyone.
 </footer>
 
 </body>
