--- a/index.html
+++ b/index.html
@@ -1,163 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ToolZenHub - Smart Tools for Everyone</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Poppins', sans-serif;
-        background: #ffffff;
-        color: #333333;
-    }
+body{
+  margin:0;
+  font-family:Poppins,sans-serif;
+  background:#fff;
+  color:#333;
+}
 
-    /* HEADER */
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 18px 50px;
-        background: #ffffff;
-        border-bottom: 1px solid #eaeaea;
-    }
-    .logo {
-        font-size: 26px;
-        font-weight: 700;
-        color: #2ecc71;
-    }
-    nav a {
-        margin-left: 22px;
-        text-decoration: none;
-        font-weight: 600;
-        color: #333333;
-    }
-    nav a:hover {
-        color: #2ecc71;
-    }
+/* HEADER */
+header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:18px 50px;
+  border-bottom:1px solid #eee;
+}
+.logo{
+  font-size:26px;
+  font-weight:700;
+  color:#2ecc71;
+}
+nav a{
+  margin-left:22px;
+  text-decoration:none;
+  color:#333;
+  font-weight:600;
+}
+nav a:hover{color:#2ecc71}
 
-    /* HERO SECTION */
-    .hero {
-        text-align: center;
-        padding: 80px 20px;
-    }
-    .hero h1 {
-        font-size: 48px;
-        font-weight: 700;
-        color: #2ecc71;
-    }
-    .hero p {
-        font-size: 18px;
-        margin: 15px auto;
-        max-width: 650px;
-    }
-    .btn-main {
-        display: inline-block;
-        padding: 15px 30px;
-        background: #2ecc71;
-        color: #ffffff;
-        border-radius: 6px;
-        text-decoration: none;
-        font-weight: 600;
-        margin-top: 18px;
-        font-size: 18px;
-    }
-    .btn-main:hover {
-        background: #27ae60;
-    }
+/* HERO */
+.hero{
+  text-align:center;
+  padding:80px 20px;
+}
+.hero h1{
+  font-size:46px;
+  color:#2ecc71;
+}
+.hero p{
+  max-width:650px;
+  margin:15px auto;
+  font-size:18px;
+}
+.btn-main{
+  display:inline-block;
+  margin-top:18px;
+  padding:14px 30px;
+  background:#2ecc71;
+  color:#fff;
+  border-radius:6px;
+  text-decoration:none;
+  font-weight:600;
+}
 
-    /* TOOLS SECTION */
-    .tools-section {
-        padding: 60px 20px;
-        max-width: 1100px;
-        margin: auto;
-        text-align: center;
-    }
-    .tools-section h2 {
-        font-size: 32px;
-        font-weight: 700;
-        margin-bottom: 30px;
-        color: #2ecc71;
-    }
-    .tools-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 25px;
-    }
-    .tool-card {
-        border: 1px solid #eaeaea;
-        padding: 25px;
-        border-radius: 10px;
-        background: #ffffff;
-        transition: 0.3s ease-in-out;
-    }
-    .tool-card:hover {
-        transform: translateY(-6px);
-        box-shadow: 0 10px 18px rgba(0,0,0,0.08);
-    }
-    .tool-card a {
-        display: inline-block;
-        margin-top: 12px;
-        font-weight: 600;
-        color: #2ecc71;
-        text-decoration: none;
-    }
+/* TOOLS */
+.tools-section{
+  padding:60px 20px;
+  max-width:1100px;
+  margin:auto;
+  text-align:center;
+}
+.tools-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:25px;
+}
+.tool-card{
+  border:1px solid #eee;
+  padding:28px;
+  border-radius:12px;
+}
+.tool-card a{
+  color:#2ecc71;
+  font-weight:600;
+  text-decoration:none;
+}
 
-    /* FOOTER */
-    footer {
-        margin-top: 60px;
-        padding: 28px;
-        text-align: center;
-        background: #f8f8f8;
-        font-size: 14px;
-    }
+/* FOOTER */
+footer{
+  text-align:center;
+  padding:28px;
+  background:#f8f8f8;
+  margin-top:60px;
+}
 </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header>
-    <div class="logo">ToolZenHub</div>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">about</a>
-        <a href="contact.html">contact</a>
-    </nav>
+  <div class="logo">ToolZenHub</div>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/about.html">About</a>
+    <a href="/contact.html">Contact</a>
+  </nav>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-    <h1>Your Tools, All in One Place</h1>
-    <p>AI-powered productivity, financial tools, and health calculators designed to simplify your life. Fast, clean, accurate tools built for everyone.</p>
-    <a class="btn-main" href="#tools">Explore Tools</a>
+  <h1>Your Tools, All in One Place</h1>
+  <p>AI-powered productivity, finance & health calculators built to simplify your life.</p>
+  <a href="#tools" class="btn-main">Explore Tools</a>
 </section>
 
-<!-- TOOLS SECTION -->
 <section class="tools-section" id="tools">
-    <h2>Our Featured Tools</h2>
+  <h2 style="color:#2ecc71">Our Featured Tools</h2>
 
-    <div class="tools-grid">
-        <div class="tool-card">
-            <h3>Financial Tools Suite</h3>
-            <p>EMI, SIP, SWP, Home Loan & More</p>
-            <a href="https://toolzenhub.in/paisa/">Open Tools</a>
-        </div>
-
-        <div class="tool-card">
-            <h3>Health Tools Suite</h3>
-            <p>BMI, Hydration, Sleep, Habit Builder</p>
-            <a href="https://toolzenhub.in/HealthTracker/">Open Tools</a>
-        </div>
+  <div class="tools-grid">
+    <div class="tool-card">
+      <h3>Finance Calculators</h3>
+      <p>EMI, SIP, SWP, Home Loan & More</p>
+      <a href="/paisa/">Open Tools →</a>
     </div>
+
+    <div class="tool-card">
+      <h3>Health Calculators</h3>
+      <p>BMI, Hydration, Sleep & More</p>
+      <a href="/HealthTracker/">Open Tools →</a>
+    </div>
+  </div>
 </section>
 
-<!-- FOOTER -->
 <footer>
-    © 2025 ToolZenHub — Made with 💚 for Everyone.
+  © 2025 ToolZenHub — Made with 💚
 </footer>
 
 </body>
