--- a/about.html
+++ b/about.html
@@ -1,65 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>About | ToolZenHub</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  background: #ffffff;
-  color: #333;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 18px 50px;
-  border-bottom: 1px solid #eaeaea;
-}
-
-.logo {
-  font-size: 26px;
-  font-weight: 700;
-  color: #2ecc71;
-}
-
-nav a {
-  margin-left: 22px;
-  text-decoration: none;
-  font-weight: 600;
-  color: #333;
-}
-nav a:hover { color: #2ecc71; }
-
-.hero {
-  text-align: center;
-  padding: 70px 20px;
-}
-.hero h1 {
-  font-size: 42px;
-  color: #2ecc71;
-}
-
-.content {
-  max-width: 900px;
-  margin: auto;
-  padding: 30px 20px;
-  line-height: 1.8;
-}
-
-h2 { color: #2ecc71; }
-
-footer {
-  margin-top: 60px;
-  padding: 28px;
-  text-align: center;
-  background: #f8f8f8;
-}
+body{margin:0;font-family:Poppins,sans-serif;background:#fff;color:#333}
+header{display:flex;justify-content:space-between;align-items:center;padding:18px 50px;border-bottom:1px solid #eee}
+.logo{color:#2ecc71;font-size:26px;font-weight:700}
+nav a{margin-left:22px;color:#333;text-decoration:none;font-weight:600}
+.hero{text-align:center;padding:70px 20px}
+.hero h1{color:#2ecc71}
+.content{max-width:900px;margin:auto;padding:40px 20px}
+footer{text-align:center;padding:20px;background:#f8f8f8;margin-top:40px}
 </style>
 </head>
 
@@ -68,35 +23,34 @@ footer {
 <header>
   <div class="logo">ToolZenHub</div>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="/index.html">Home</a>
+    <a href="/about.html">About</a>
+    <a href="/contact.html">Contact</a>
   </nav>
 </header>
 
 <section class="hero">
   <h1>About ToolZenHub</h1>
-  <p>Your all-in-one hub for financial, health & future AI tools.</p>
+  <p>Smart Tools for Smarter Living</p>
 </section>
 
 <section class="content">
   <h2>Who We Are</h2>
-  <p>ToolZenHub is a modern digital tools ecosystem that helps users manage finances, health, and productivity using fast, reliable, and clean web tools.</p>
+  <p>ToolZenHub is a growing ecosystem of finance, health & productivity tools.</p>
 
   <h2>What We Offer</h2>
   <ul>
-    <li>Financial Calculators – EMI, SIP, SWP, Loans</li>
-    <li>Health Calculators – BMI, Hydration, Sleep</li>
-    <li>AI Productivity Tools (Coming Soon)</li>
-    <li>Educational Content & Guides</li>
+    <li>Finance Calculators (EMI, SIP, SWP etc.)</li>
+    <li>Health Tools (BMI, Sleep, Hydration)</li>
+    <li>AI Utilities (Coming Soon)</li>
   </ul>
 
-  <h2>Our Mission</h2>
-  <p>To build India's most trusted free tools platform for everyday life decisions.</p>
+  <h2>Our Vision</h2>
+  <p>To build a free, accurate and simple tools platform for everyone.</p>
 </section>
 
 <footer>
-  © 2025 ToolZenHub — Made with 💚 for Everyone.
+  © 2025 ToolZenHub
 </footer>
 
 </body>
