--- a/header.html
+++ b/header.html
@@ -1,10 +1,17 @@
-<header style="border-bottom:1px solid #eaeaea; padding:18px 50px; display:flex; justify-content:space-between; align-items:center;">
-  <div style="font-size:26px; font-weight:700; color:#2ecc71;">ToolZenHub</div>
-  <nav>
-    <a href="/index.html" style="margin-left:20px; text-decoration:none; color:#333; font-weight:600;">Home</a>
-    <a href="/about.html" style="margin-left:20px; text-decoration:none; color:#333; font-weight:600;">About</a>
-    <a href="/contact.html" style="margin-left:20px; text-decoration:none; color:#333; font-weight:600;">Contact</a>
-    <a href="/paisa/" style="margin-left:20px; text-decoration:none; color:#333; font-weight:600;">Finance</a>
-    <a href="/HealthTracker/" style="margin-left:20px; text-decoration:none; color:#333; font-weight:600;">Health</a>
-  </nav>
+<header class="site-header">
+  <div class="header-container">
+    <div class="logo">ToolZenHub</div>
+
+    <nav class="nav">
+      <ul class="nav-links">
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+
+      <div class="menu-toggle" id="menu-toggle">
+        ☰
+      </div>
+    </nav>
+  </div>
 </header>
