--- a/index.html
+++ b/index.html
@@ -84,6 +84,33 @@ nav a:hover{color:#2ecc71}
   text-decoration:none;
 }
 
+  /* MOBILE HEADER FIX */
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    gap: 10px;
+    padding: 14px 20px;
+  }
+
+  nav {
+    display: flex;
+    gap: 16px;
+  }
+
+  nav a {
+    margin-left: 0;
+    font-size: 15px;
+  }
+
+  .hero h1 {
+    font-size: 34px;
+  }
+
+  .hero p {
+    font-size: 16px;
+  }
+}
+
 /* FOOTER */
 footer{
   text-align:center;
