--- a/index.html
+++ b/index.html
@@ -15,28 +15,64 @@ body{
   color:#333;
 }
 
-/* HEADER */
-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:18px 50px;
+/* ========== HEADER ========== */
+
+.site-header {
+  width: 100%;
+  background:#fff;
   border-bottom:1px solid #eee;
+  padding:18px 50px;
 }
+
+.header-container {
+  max-width: 1200px;
+  margin: 0 auto;
+
+  display:flex;
+  align-items:center;
+  justify-content:space-between; /* logo left, nav right */
+}
+
 .logo{
   font-size:26px;
   font-weight:700;
   color:#2ecc71;
 }
-nav a{
-  margin-left:22px;
+
+.nav {
+  display:flex;
+  align-items:center;
+}
+
+.nav-links {
+  list-style:none;
+  display:flex;              /* horizontal menu */
+  gap:22px;
+  margin:0;
+  padding:0;
+}
+
+.nav-links a{
   text-decoration:none;
   color:#333;
   font-weight:600;
 }
-nav a:hover{color:#2ecc71}
 
-/* HERO */
+.nav-links a:hover{
+  color:#2ecc71;
+}
+
+/* hamburger for mobile (hidden on desktop) */
+.menu-toggle {
+  display:none;
+  font-size:26px;
+  margin-left:18px;
+  cursor:pointer;
+  user-select:none;
+}
+
+/* ========== HERO ========== */
+
 .hero{
   text-align:center;
   padding:80px 20px;
@@ -61,7 +97,8 @@ nav a:hover{color:#2ecc71}
   font-weight:600;
 }
 
-/* TOOLS */
+/* ========== TOOLS ========== */
+
 .tools-section{
   padding:60px 20px;
   max-width:1100px;
@@ -84,34 +121,40 @@ nav a:hover{color:#2ecc71}
   text-decoration:none;
 }
 
-  /* MOBILE HEADER FIX */
+/* ========== RESPONSIVE ========== */
+
 @media (max-width: 768px) {
-  header {
-    flex-direction: column;
-    gap: 10px;
-    padding: 14px 20px;
+  .site-header {
+    padding:14px 20px;
   }
 
-  nav {
-    display: flex;
-    gap: 16px;
+  .header-container {
+    /* keep logo left & menu right even on mobile */
   }
 
-  nav a {
-    margin-left: 0;
-    font-size: 15px;
+  .nav-links {
+    display:none; /* hide links on small screens (you can add JS later to toggle) */
+  }
+
+  .menu-toggle {
+    display:block;
+  }
+
+  .hero {
+    padding:60px 16px;
   }
 
   .hero h1 {
-    font-size: 34px;
+    font-size:34px;
   }
 
   .hero p {
-    font-size: 16px;
+    font-size:16px;
   }
 }
 
-/* FOOTER */
+/* ========== FOOTER ========== */
+
 footer{
   text-align:center;
   padding:28px;
@@ -123,13 +166,22 @@ footer{
 
 <body>
 
-<header>
-  <div class="logo">ToolZenHub</div>
-  <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="/contact.html">Contact</a>
-  </nav>
+<header class="site-header">
+  <div class="header-container">
+    <div class="logo">ToolZenHub</div>
+
+    <nav class="nav">
+      <ul class="nav-links">
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+
+      <div class="menu-toggle" id="menu-toggle">
+        ☰
+      </div>
+    </nav>
+  </div>
 </header>
 
 <section class="hero">
